# cpp_nn

./: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  clang-tool.ini  meson.build  meson_options.txt
.devcontainer/: conanfile.txt  dev.Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
doc/: Doxyfile.in  bibliography.bib  meson.build
scripts/: clang_format_files.sh  qtcreator_run.sh  torch_change_lib_name.py  update_gcc_alternatives.sh
src/: main.cpp  meson.build
src/hello/: hello.cpp  hello.hpp  meson.build
subprojects/: .gitignore  libtorch.wrap
test/: hello.cpp  meson.build
